--- a/locales/zh_SIMPLIFIED.json
+++ b/locales/zh_SIMPLIFIED.json
@@ -1,4 +1,7 @@
 {
+  "scan": {
+    "platform_beta": "平台扫描为测试版，目前仅在 Windows 支持"
+  },
   "settings": {
     "locale_name": "简体中文",
     "locale_changed": "您更换了语言，当前是预览模式，保存后才能永久生效",
@@ -25,6 +28,9 @@
     "backup_all": "备份所有存档",
     "backup_all_hint": "这个操作会备份所有游戏的存档，可能会花费较长时间，确定请输入yes",
     "backup_all_in_progress": "正在备份所有游戏...",
+    "pcgw_db_path": "PCGW 本地数据库路径",
+    "pcgw_db_path_placeholder": "例如：E:/ai/codeing/trae/You-Yun-Bei/database/database.db",
+    "choose_db_file": "选择数据库文件",
     "apply_all": "应用所有存档",
     "apply_all_hint": "这是一个高危动作，可能会花费较长时间，你确定要覆盖所有游戏的存档吗？确定请输入yes",
     "apply_all_in_progress": "正在恢复全部备份...",
@@ -188,7 +194,9 @@
     "invalid_name_error": "无效的游戏名，请不要包含无法创建文件的特殊字符",
     "duplicated_name_error": "重复的游戏名（游戏名不区分大小写）",
     "path_variable_hint": "您可以使用路径变量（如 <home>）来创建跨设备兼容的路径",
-    "device_info": "设备信息"
+    "device_info": "设备信息",
+    "edit": "编辑",
+    "preview_resolved": "解析预览"
   },
   "app": {
     "early_access_warning": "这是一个早期测试版本，不能保证稳定性，请谨慎使用"
@@ -229,6 +237,38 @@
     "sync_settings": "同步",
     "settings": "设置",
     "about": "关于"
+  },
+  "pcgw": {
+    "title": "PCGW 索引查询",
+    "query_label": "按名称或别名查询",
+    "query_placeholder": "输入游戏名称或别名",
+    "query_action": "查询索引",
+    "query_ok": "查询成功",
+    "query_failed": "查询失败",
+    "query_empty": "请输入要查询的名称",
+    "desktop_only_hint": "该功能仅在桌面应用（Tauri）中可用",
+    "refresh_action": "刷新索引信息",
+    "refresh_ok": "索引信息已更新",
+    "refresh_failed": "索引信息刷新失败",
+    "index_version": "索引版本",
+    "index_count": "条目数量",
+    "fuzzy_label": "模糊匹配",
+    "platform_label": "平台",
+    "platform_placeholder": "选择平台",
+    "platform_all": "全部",
+    "limit_label": "返回数量上限",
+    "matched_by": "匹配依据",
+    "score": "评分",
+    "aliases": "别名",
+    "save_rules": "存档规则",
+    "install_rules": "安装路径规则",
+    "col_id": "规则ID",
+    "col_desc": "说明",
+    "col_path": "路径模板",
+    "col_platforms": "适用平台",
+    "col_confidence": "置信度",
+    "col_patterns": "匹配模式",
+    "sqlite_only_hint": "索引来源：仅本地 SQLite（database/database.db 或设置中的路径）"
   },
   "save_location_drawer": {
     "drawer_title": "修改配置",
@@ -418,5 +458,111 @@
     "import_from": "从其他设备导入路径",
     "select_device": "选择设备",
     "import_success": "路径导入成功"
+  },
+  "pcgw": {
+    "title": "PCGW 索引查询",
+    "query_label": "游戏名称或别名",
+    "query_placeholder": "例如：Stardew Valley、Example Game",
+    "query_action": "查询",
+    "query_ok": "查询成功",
+    "query_failed": "查询失败",
+    "query_not_found": "未找到匹配的游戏",
+    "query_empty": "请输入要查询的名称",
+    "desktop_only_hint": "该功能仅在桌面（Tauri）模式下可用，浏览器预览无法调用后端",
+    "aliases": "别名",
+    "save_rules": "存档路径规则",
+    "install_rules": "安装路径规则",
+    "col_id": "规则ID",
+    "col_desc": "描述",
+    "col_path": "路径模板",
+    "col_platforms": "平台",
+    "col_confidence": "可信度",
+    "col_patterns": "路径模式",
+    "fuzzy_label": "启用模糊匹配",
+    "platform_label": "平台过滤",
+    "platform_placeholder": "选择平台",
+    "platform_all": "全部平台",
+    "limit_label": "返回上限",
+    "matched_by": "命中依据",
+    "score": "评分",
+    "index_version": "索引版本",
+    "index_count": "索引条目",
+    "refresh_action": "刷新索引",
+    "refresh_ok": "索引信息已更新",
+    "refresh_failed": "索引刷新失败",
+    "import_action": "本地导入",
+    "import_ok": "索引导入成功",
+    "import_failed": "索引导入失败",
+    "import_sqlite_action": "从database.db导入",
+    "import_sqlite_ok": "SQLite导入成功",
+    "import_sqlite_failed": "SQLite导入失败"
+  }
+  ,
+  "scan": {
+    "title": "扫描与匹配测试",
+    "panel_title": "自动扫描本地游戏",
+    "platform": "平台",
+    "common_dirs": "常见目录",
+    "start": "开始扫描",
+    "start_scan": "开始扫描",
+    "registry": "注册表",
+    "processes": "进程",
+    "progress": "扫描进度",
+    "result": "扫描结果",
+    "detected_count": "检测到游戏数量",
+    "matched_count": "匹配到存档数量",
+    "errors_count": "错误数量",
+    "completed": "扫描完成",
+    "subscribe_failed": "订阅进度事件失败",
+    "unexpected_error": "发生意外错误",
+    "desktop_only": "该功能仅在桌面模式可用",
+    "platform_beta": "非 Windows 平台的扫描功能处于 Beta 状态，功能受限",
+    
+    "search_placeholder": "按名称搜索（支持模糊匹配）",
+    "filter_source_placeholder": "来源筛选（可多选）",
+    "export_json": "导出JSON",
+    "copy_path": "复制路径",
+    "copied_ok": "已复制到剪贴板",
+    "copy_failed": "复制失败，请手动选择",
+    "no_data_to_export": "无可导出的数据",
+    "detected_table": "检测到的游戏",
+    "matches_table": "匹配到的存档",
+    "unknown_path": "未知路径",
+    "yes": "是",
+    "no": "否",
+    "quick_add": "一键添加",
+    "col": {
+      "name": "名称",
+      "source": "来源",
+      "install_path": "安装路径",
+      "save_status": "存档状态",
+      "rule_id": "规则ID",
+      "resolved_path": "解析路径",
+      "exists": "存在",
+      "confidence": "可信度",
+      "actions": "操作"
+    },
+    "has_save": "有存档",
+    "no_save": "无存档",
+    "source": {
+      "Steam": "Steam",
+      "Epic": "Epic",
+      "Origin": "Origin/EA",
+      "Registry": "注册表",
+      "CommonDir": "常见目录",
+      "Process": "进程",
+      "Manual": "手动"
+    },
+    "steps": {
+      "index_load": "加载索引",
+      "detect_games": "检测已安装游戏",
+      "match_saves": "匹配存档路径",
+      "done": "完成",
+      "epic_scanning": "扫描 Epic 清单",
+      "origin_scanning": "扫描 EA/Origin 安装列表",
+      "common_directories_scanning": "扫描常见游戏目录",
+      "origin_done": "Origin 扫描完成",
+      "common_done": "常见目录扫描完成"
+    }
   }
 }
