chore(resources): 移动 SQLite 到 src-tauri/database 以满足打包资源路径要求

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,4 +1,7 @@
 {
+    "scan": {
+        "platform_beta": "Platform scan is in beta; currently supported on Windows only"
+    },
     "settings": {
         "locale_name": "Français",
         "locale_changed": "Vous avez changé votre langue, qui est actuellement un modèle de pré-visualisation, avant d'entrer en vigueur de façon permanente",
