--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,5 +1,8 @@
 {
-    "settings": {
+  "scan": {
+    "platform_beta": "Platform scan is in beta; currently supported on Windows only"
+  },
+  "settings": {
         "locale_name": "한국어",
         "locale_changed": "현재 미리 보기 모델인 언어가 변경되어 영구적으로 힘을 입력할 수 있습니다",
         "reset_success": "성공의 이유",
